Fix Bug 975515: Completed refactoring of js,html,css to allow for more than one video - not browser tested yet.
Comment Cleanup & Tested on Windows IE9/FF (ok). IE8 looks bad but matches current site.

Fix Mkellys PR Suggestions

Fixed wrong background position for monument and interns at small resolution.

--- a/careers/careers/static/css/careers.css
+++ b/careers/careers/static/css/careers.css
@@ -14,7 +14,7 @@
 #life-blocks-next:after,
 #life-blocks-prev:before,
 #life-blocks-prev:after,
-.community-modal-open:before,
+.video-modal-open:before,
 .locations-remote:before,
 .locations-label:before,
 .location-link:before {
@@ -101,6 +101,21 @@
     color: #a2a2a9;
     line-height: 1.3;
 }
+
+.splash-video {
+    width: 298px;
+    height: 168px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: inline-block;
+    position: relative;
+    background: url(/static/img/are-you-mozillian-video-thumb.jpg) top left no-repeat;
+}
+
+    .splash-video .video-modal-open {
+        top: 30px;
+        left: 15px
+    }
 
 @media (max-width: 680px) {
 
@@ -234,6 +249,7 @@
     background: #ffffff;
     padding: 20px;
     overflow: hidden;
+    z-index: 0;
 }
 
 .teams-head {
@@ -1555,11 +1571,11 @@
         background-image: url(/static/img/community/community-mobile.jpg);
     }
 
-    .community-hack:before {
-        background-position: -280px 0;
+    .community-monument:before {
+        background-position: -560px 0;
     }
     .community-interns:before {
-        background-position: -560px 0;
+        background-position: -280px 0;
     }
     .community-reps:before {
         background-position: 0 -160px;
@@ -1594,7 +1610,7 @@
     color: #4bbde6;
 }
 
-.community-modal {
+.video-modal {
     position: absolute;
     z-index: 1;
     top: 200px;
@@ -1617,7 +1633,7 @@
 }
 
 
-.community-modal.community-current {
+.video-play {
      left: 50%;
      opacity: 1;
 
@@ -1626,7 +1642,7 @@
 
 }
 
-.community-modal-open {
+.video-modal-open {
     position: absolute;
     top: 0;
     left: 0;
@@ -1637,7 +1653,7 @@
     border: 0;
     background-color: transparent;
 }
-    .community-modal-open:before {
+    .video-modal-open:before {
         content: '\e014';
         padding-right: 20px;
         font-size: 80px;
@@ -1645,12 +1661,12 @@
         opacity: 0.5;
     }
 
-    .community-modal-open:hover:before {
+    .video-modal-open:hover:before {
         opacity: 0.8;
         cursor: pointer;
     }
 
-.community-modal-close {
+.video-modal-close {
     position: absolute;
     top: 7px;
     right: 11px;
@@ -1669,7 +1685,26 @@
     cursor: pointer;
 }
 
-.community-video-wrapper {
+.video-modal-close {
+    position: absolute;
+    top: 7px;
+    right: 11px;
+    display: block;
+    height: 18px;
+    width: 18px;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    background: none;
+    color: #000;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 18px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.video-wrapper {
     position: relative;
     width: 100%;
     height: 0;
@@ -1677,7 +1712,7 @@
     padding-top: 56.1%;
 }
 
-.community-video-wrapper .video-js {
+.video-wrapper .video-js {
     position: absolute;
     top: 0;
     left: 0;
@@ -1712,7 +1747,7 @@
     .community-box:before {
          background-size: 300% 200%;
     }
-        .community-hack:before {
+        .community-monument:before {
             background-position: -200% 0;
         }
         .community-interns:before {
